# research-mail

./: .env.example  .gitignore  README.md  USER_MANUAL.md
backend/: init_db.py  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  activity.py  campaigns.py  discovery.py  documents.py  drafts.py  outreach.py  system.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  migrations.py  prompts.py  utils.py
backend/app/models/: __init__.py  activity.py  base.py  campaign.py  db_models.py  document.py  draft.py  enums.py  fit_score.py  generated_email.py  outreach.py  professor.py  research_summary.py  response.py  scraper.py  student_profile.py
backend/app/repository/: __init__.py  base.py  draft_repository.py  json_base.py  outreach_repository.py  postgres_draft_repository.py
backend/app/services/: __init__.py  bulk_email_service.py  email_generation.py  email_provider.py  gmail_service.py  outreach_service.py  platform_service.py  safety_service.py  scraper.py  scraper_base.py  summarization.py  university_scraper.py
backend/app/services/ai/: __init__.py  base.py  exceptions.py  factory.py  gemini.py  ollama.py  openrouter.py
backend/tests/: test_scraper.py  test_summarization.py
docs/: architecture.md
frontend/: .env.example  DEPLOYMENT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: robots.txt
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx
frontend/src/lib/: constants.ts
(+32 files in other folders)
