[tool.poetry]
name = "research-internship-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Research Internship Agent"
authors = ["Senior Engineer <engineer@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
google-api-python-client = "^2.116.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
portalocker = "^2.8.2"
pypdf = "^4.3.1"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
